--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -26,7 +26,7 @@ body
     position: relative;
 
     width: 100%;
-    height: 680px;
+    height: 100%;
 
     background-color: #000;
     box-shadow: 0 0 0 3px;
@@ -52,14 +52,13 @@ body
     height: 100%;
 
     background-color: #ddd;
-    
-    
+
+    perspective: 1800;
 }
 
 figcaption
 {
     text-align: center;
-    
 }
 
 .img-title
@@ -75,23 +74,47 @@ figcaption
 
 .img-figure
 {
-  position: absolute;
-  width: 320px;
-  height: 360px;
-  margin: 0;
-  padding: 40px;
-  box-sizing: border-box;
-  background-color: #fff;
-  cursor: pointer;
-  transform-origin: 0 50% 0;
-  transform-style: preserve-3d;
-  transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+    position: absolute;
 
-  &.is-inverse
-  {
-      transform: translate(320px) rotateY(180deg);
-  }
+    box-sizing: border-box;
+    width: 320px;
+    height: 360px;
+    margin: 0;
+    padding: 40px;
 
+    cursor: pointer;
+    transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+    transform-origin: 0 50% 0;
+
+    background-color: #fff;
+
+    transform-style: preserve-3d;
+}
+
+.img-back
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+
+    transform: rotateY(180deg) translateZ(1px);
+    text-align: center;
+
+    color: #666;
+    background: #fff;
+
+    backface-visibility: hidden;
+}
+
+
+.is-inverse
+{
+    transform: translate(320px) rotateY(180deg);
 }
 
 
